# battor

./: .gitignore  .gitmodules  LICENSE  NOTICE  README.md  sync.sh
battor-scooter/: common.sh  exp-manager.sh
chromeapp/: background.js  manifest.json  window.html
fw/: Makefile  baud_rate.py  blink.c  blink.h  common.h  control.c  control.h  drivers.c  drivers.h  error.c  error.h  fs.c  fs.h  interrupt.c  interrupt.h  main.c  params.c  params.h  ringbuf.c  ringbuf.h  samples.c  samples.h  store.c  store.h  usbpower.c  usbpower.h
fw/drivers/: adc.c  adc.h  button.c  button.h  clock.c  clock.h  dma.c  dma.h  eeprom.c  eeprom.h  gpio.c  gpio.h  int.c  int.h  led.c  led.h  mux.c  mux.h  nvm.c  nvm.h  pot.c  pot.h  reset.c  reset.h  sd.c  sd.h  spi.c  spi.h  sram.c  sram.h  timer.c  timer.h  uart.c  uart.h  usart.c  usart.h
nocharge/: Makefile  nocharge.c
scripts/: charge.sh  regtrace.sh  screengrab.sh  sync.sh  vregtrace.sh
sw/: 99-libftdi.rules  AUTHORS  Makefile  Makefile.am  Makefile.in  battor.c  bootstrap  common.h  config.h  config.status  configure  configure.ac  control.c  control.h  params.c  params.h  samples.c  samples.h  uart.c  uart.h  unload  xmega.h
sw/autom4te.cache/: output.0  requests  traces.0  traces.1
sw/corr/: sync_corr.m
systrace/: AUTHORS  prefix.html  systrace.py  systrace_trace_viewer.html  update.py
tests/: catapult-armv7l.patch  fw_qc_test.sh  power_cycle_battor.py
